Update java2.md